<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mailloux.chris.volevents.ForgotPasswordActivity">

    <TextView
        android:id="@+id/forgot_password_screen_text_line_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/forgot_password_message_line_1"/>

    <TextView
        android:id="@+id/forgot_password_screen_text_line_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/forgot_password_message_line_2"/>

    <TextView
        android:id="@+id/forgot_password_screen_text_line_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/forgot_password_message_line_3"/>

    <EditText
        android:id="@+id/password_reset_code_field"
        android:hint="@string/forgot_password_reset_code_field_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/password_reset_code_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:text="@string/password_reset_code_submit_button"/>

    <TextView
        android:id="@+id/forgot_password_screen_text_line_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/forgot_password_message_line_4"/>

</LinearLayout>
